build_stability.log
Reusing configuration cache.
> Task :paper-server:processLog4jPluginsResources NO-SOURCE
> Task :paper-api:generateApiVersioningFile UP-TO-DATE
> Task :paper-server:cloneSpigotBuildData UP-TO-DATE
> Task :paper-api:processResources NO-SOURCE
> Task :paper-server:unpackSpigotBuildData UP-TO-DATE
> Task :paper-api:compileJava UP-TO-DATE
> Task :paper-api:classes UP-TO-DATE
> Task :paper-api:jar UP-TO-DATE
> Task :paper-server:compileLog4jPluginsJava UP-TO-DATE
> Task :paper-server:log4jPluginsClasses UP-TO-DATE
> Task :paper-server:downloadMcManifest
> Task :paper-server:downloadMcVersionManifest UP-TO-DATE
> Task :paper-server:downloadMappings UP-TO-DATE
> Task :paper-server:downloadServerJar UP-TO-DATE
> Task :paper-server:extractFromBundler UP-TO-DATE
> Task :paper-server:filterVanillaJar UP-TO-DATE
> Task :paper-server:generateMappings UP-TO-DATE
> Task :paper-server:setupMacheResources UP-TO-DATE
> Task :paper-server:generateSpigotMappings UP-TO-DATE
> Task :paper-server:spigotRemapJar UP-TO-DATE
> Task :paper-server:cleanupMappings UP-TO-DATE
> Task :paper-server:patchMappings UP-TO-DATE
> Task :paper-server:extractMacheResources UP-TO-DATE

> Task :paper-server:compileJava
warning: using incubating module(s): jdk.incubator.vector

> Task :paper-server:applyResourcePatches

> Task :paper-server:compileJava
D:\ASAS\minecraft_server\papermc_modificado\Paper\paper-server\src\minecraft\java\net\minecraft\world\entity\decoration\HangingEntity.java:95: error: no suitable method found for move(Vector3f)
        return this.getBoundingBox().move(this.getDirection().step().mul(-0.5F)).deflate(1.0E-7);
                                    ^
    method AABB.move(BlockPos) is not applicable
      (argument mismatch; Vector3f cannot be converted to BlockPos)
    method AABB.move(Vec3) is not applicable
      (argument mismatch; Vector3f cannot be converted to Vec3)
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use or override a deprecated API that is marked for removal.
Note: Recompile with -Xlint:removal for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
1 warning

> Task :paper-server:applyResourcePatches
Applied 6 patches

> Task :paper-server:compileJava FAILED
> Task :paper-server:processResources UP-TO-DATE

[Incubating] Problems report is available at: file:///D:/ASAS/minecraft_server/papermc_modificado/Paper/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':paper-server:compileJava'.
> Compilation failed; see the compiler output below.
  warning: using incubating module(s): jdk.incubator.vector
  1 error
  1 warning

22 actionable tasks: 3 executed, 19 up-to-date
Configuration cache entry reused.
* Try:
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 1m 12s
